--- a/web-app/src/components/Navbar/Navbar.module.css
+++ b/web-app/src/components/Navbar/Navbar.module.css
@@ -43,7 +43,7 @@
 .nav a,
 .nav button {
   font-family: var(--font-heading);
-  font-size: 1.1rem;
+  font-size: 1.15rem;
   color: var(--zinc-100);
   font-weight: 500;
   text-decoration: none;
@@ -59,12 +59,12 @@
   border-radius: 25px;
 }
 .nav .icon {
-  width: 1.4rem;
-  height: 1.4rem;
+  width: 1rem;
+  height: 1rem;
+  margin-left: 0.2rem;
   position: relative;
-  transform: scale(0.85);
+  transform: scale(0.75);
   transition: transform 0.3s;
-  top: 1px;
   border-radius: 50%;
   overflow: hidden;
 }
@@ -101,7 +101,7 @@
   border-radius: 15px;
   border: 8px solid var(--blue-300);
   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
-  z-index: 99;
+  z-index: 105;
   animation: slide_down_bounce 0.5s;
   display: flex;
   flex-direction: column;
@@ -150,6 +150,7 @@
   display: flex;
   justify-content: baseline;
   align-items: center;
+  font-size: 1.1rem;
 }
 
 .dropdown p {
@@ -161,11 +162,11 @@
 }
 
 .dropdown .icon {
-  width: 1.1rem;
-  height: 1.1rem;
+  width: 1rem;
+  height: 1rem;
   position: relative;
-  transform: scale(0.85);
-  margin-left: 0.1rem;
+  transform: scale(0.65);
+  margin-left: 0;
 }
 
 .social {
@@ -174,7 +175,7 @@
   justify-content: center;
   align-items: center;
   font-family: var(--font-heading);
-  font-size: 1.1rem;
+  font-size: 1.15rem;
   font-weight: 600;
   cursor: pointer;
   padding: 0.25rem 0.75rem;
@@ -214,7 +215,7 @@
 .header:hover .social,
 .header.active .social,
 .header.interact .social {
-  background: var(--blue-100);
+  /* background: var(--blue-50); */
   border: var(--blue-900) solid 2px;
   color: var(--blue-900);
 }
@@ -349,7 +350,8 @@
 }
 
 .mobileNav .icon {
-  width: calc(1.25rem + 1svw);
+  width: calc(1rem);
+  transform: scale(0.85);
 }
 
 .mobileNav .social {
@@ -379,6 +381,10 @@
 }
 
 @media (min-width: 64rem) {
+  .grad {
+    display: none;
+  }
+
   .hamburger {
     display: none;
   }
