--- a/web-app/src/components/TextPanel/TextPanel.module.css
+++ b/web-app/src/components/TextPanel/TextPanel.module.css
@@ -1,54 +1,115 @@
-
 .panel {
-  display: flex;
-  flex-direction: row;
+  width: 95%;
+  margin: 2rem auto;
+  max-width: 80rem;
+  display: grid;
   align-items: center;
+}
+
+.panel h2 {
+  width: 100%;
+}
+
+.contentContainer {
+  display: flex;
   justify-content: center;
-  width: 90%;
-  max-width: 60rem;
-  margin: 1rem auto;
-}
-
-.panel.right {
-  flex-direction: row-reverse;
-}
-
-.panel.wide {
-  max-width: 70rem;
+  flex-direction: column;
+  align-items: center;
 }
 
 .imageContainer {
   display: none;
-  min-width: 19rem;
-  width: 40%;
-  max-width: 23rem;
-}
-
-.image {
-  display: block;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  border: var(--yellow-400) 12px solid;
-  border-bottom-right-radius: 90px;
   position: relative;
 }
 
-.content {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  justify-content: center;
-  width: 90%;
-}
-
 @media (min-width: 48rem) {
+  .panel {
+    grid-template-columns: 6fr 3fr;
+    gap: 2.5rem;
+    grid-template-rows: 1fr;
+  }
+
   .imageContainer {
     display: block;
   }
 
-  .content {
-    width: 50%;
-    margin-left: 3rem;
+  .imageContainer img {
+    width: 100%;
+    object-fit: cover;
+    border-radius: 25px 25px 0 25px;
+    height: 28rem;
+    border: solid var(--yellow-400) 10px;
   }
+}
+
+@media (min-width: 64rem) {
+  .panel {
+    grid-template-columns: 6fr 4fr;
+    gap: 2.5rem;
+    grid-template-rows: 1fr;
+  }
+
+  .imageContainer {
+    display: block;
+  }
+
+  .imageContainer img {
+    width: 100%;
+    object-fit: cover;
+    border-radius: 25px 25px 0 25px;
+    height: 28rem;
+    border: solid var(--yellow-400) 10px;
+  }
+}
+
+
+.deco1, .deco2, .deco3 {
+  transition: all 0.5s;
+  stroke-width: 0px;
+}
+.deco1 {
+  fill: #3c5d82;
+}
+.deco2 {
+  fill: #f5b327;
+}
+.deco3 {
+  fill: #98d3e7;
+}
+
+.svg .deco1,
+.svg .deco2,
+.svg .deco3 {
+  transform: scale(0.9);
+}
+
+.svg:hover .deco1,
+.svg:hover .deco2,
+.svg:hover .deco3{
+  transform: scale(0.85);
+}
+.svg:hover .ani {
+  transform: scale(0.85) translate(0, -3px);
+}
+
+.topRight {
+  position: absolute;
+  transform: translate(30%, -20%) rotate(-90deg);
+  -webkit-transform: translate(30%, -20%) rotate(-90deg);
+  -moz-transform: translate(30%, -20%) rotate(-90deg);
+  -ms-transform: translate(30%, -20%) rotate(-90deg);
+  width: 35%;
+  right: 0;
+  top: 0;
+}
+
+.bottomLeft {
+  position: absolute;
+  transform: translate(-40%, 20%);
+  -webkit-transform: translate(-40%, 20%);
+  -moz-transform: translate(-40%, 20%);
+  -ms-transform: translate(-40%, 20%);
+  width: 35%;
+  bottom: 0;
+  left: 0;
 }
