Continue home page

--- a/web-app/src/app/page.module.css
+++ b/web-app/src/app/page.module.css
@@ -20,7 +20,7 @@
 .bannerButtons {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
   justify-content: center;
 }
 
