--- a/web-app/src/components/panel/card-panel/card-panel.module.css
+++ b/web-app/src/components/panel/card-panel/card-panel.module.css
@@ -44,7 +44,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: start; 
+  align-items: flex-start; 
 }
 
 .card .title {
@@ -68,6 +68,12 @@
   border-radius: 25px;
   font-size: 0.95rem;
   transition: all 0.25s;
+  font-weight: 600;
+}
+
+.card .icon {
+  margin-left: 0.25rem;
+  position: relative;
 }
 
 .card a:hover {
