--- a/web-app/src/app/page.module.css
+++ b/web-app/src/app/page.module.css
@@ -103,3 +103,145 @@
   color: var(--zinc-900);
   background: var(--green-300);
 }
+
+.projectsPanel h2 {
+  width: 90%;
+  max-width: 80rem;
+}
+
+.projectsInner {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  justify-items: center;
+  gap: 1rem;
+  margin: auto;
+  max-width: 110rem;
+}
+
+.projectsInner a {
+  width: 90%;
+  max-width: 25rem;
+  aspect-ratio: 1/1;
+  border: 8px solid var(--blue-300);
+  border-radius: 12px;
+  position: relative;
+  cursor: pointer;
+}
+
+.projectsInner a .text {
+  width: 100%;
+  position: absolute;
+  left: 0;
+  bottom: 15%;
+  background: var(--blue-300);
+  padding: 1rem 0.75rem;
+  font-family: var(--font-heading);
+  font-weight: 600;
+  font-size: 1.1rem;
+  color: var(--zinc-900);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.projectsInner a .icon {
+  width: 1rem;
+  height: 1rem;
+  margin-left: 0.75rem;
+}
+
+.projectsInner .image {
+  display: none;
+}
+
+.projectsInner > *:nth-child(n) {
+  display: block;
+}
+
+.projectsInner > *:nth-child(n+3) {
+  display: none;
+}
+
+.projectsInner > *:nth-last-child(2) {
+  display: block;
+}
+
+@media (min-width: 32rem) {
+  .projectsInner {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    padding: 0 1rem;
+  }
+
+  .projectsInner a {
+    width: 100%;
+  }
+
+  .projectsInner > *:nth-child(n) {
+    display: block;
+  }
+  
+  .projectsInner > *:nth-child(n+4) {
+    display: none;
+  }
+  
+  .projectsInner > *:nth-last-child(2) {
+    display: block;
+  }
+}
+
+@media (min-width: 56rem) {
+  .projectsInner {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    padding: 0 1rem;
+  }
+
+  .projectsInner a {
+    width: 100%;
+  }
+
+  .projectsInner > *:nth-child(n) {
+    display: block;
+  }
+  
+  .projectsInner > *:nth-child(n+6) {
+    display: none;
+  }
+  
+  .projectsInner > *:nth-last-child(2) {
+    display: block;
+  }
+}
+
+@media (min-width: 76rem) {
+  .projectsInner {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    margin: auto;
+    max-width: 100rem;
+  }
+
+  .projectsInner a {
+    width: 100%;
+  }
+
+  .projectsInner > *:nth-child(n) {
+    display: block;
+  }
+
+  .projectsInner .image {
+    display: block;
+    width: 100%;
+    height: 100%;
+    aspect-ratio: 2/0.95;
+    object-fit: cover;
+    grid-column: 1 / span 2;
+    grid-row: 2;
+    border: 8px solid var(--yellow-400);
+    border-radius: 12px;
+  }
+}
