--- a/web-app/src/components/navbar/navbar.module.css
+++ b/web-app/src/components/navbar/navbar.module.css
@@ -41,7 +41,8 @@
 }
 
 .nav a,
-.nav button {
+.nav button,
+.social {
   font-family: var(--font-heading);
   font-size: 1.15rem;
   color: var(--zinc-100);
@@ -58,7 +59,8 @@
   align-items: center;
   border-radius: 25px;
 }
-.nav .icon {
+.nav .icon,
+.socialIcon {
   width: 1rem;
   height: 1rem;
   margin-left: 0.2rem;
@@ -69,7 +71,8 @@
   overflow: hidden;
 }
 .nav a:hover,
-.nav button:hover {
+.nav button:hover,
+.social:hover {
   transform: scale(1.05);
 }
 
@@ -169,33 +172,6 @@
   margin-left: 0;
 }
 
-.social {
-  font-family: var(--font-heading);
-  display: none;
-  justify-content: center;
-  align-items: center;
-  font-family: var(--font-heading);
-  font-size: 1.15rem;
-  font-weight: 600;
-  cursor: pointer;
-  padding: 0.25rem 0.75rem;
-  border-radius: 15px;
-  background: none;
-  color: var(--zinc-100);
-  border: var(--zinc-100) solid 2px;
-  transition: all 0.3s;
-  text-decoration: none;
-}
-.social:hover {
-  transform: scale(1.05);
-}
-
-.socialIcon {
-  border-right: 1px solid var(--zinc-100);
-  margin-right: 0.4rem;
-  padding-right: 0.4rem;
-}
-
 .header:hover,
 .header.active,
 .header.interact {
@@ -205,27 +181,21 @@
 
 .header.active .nav a,
 .header.active .nav button,
+.header.active .social,
 .header.interact .nav a,
 .header.interact .nav button,
+.header.interact .social,
 .header:hover .nav a,
-.header:hover .nav button {
+.header:hover .nav button,
+.header:hover .social {
   color: var(--zinc-900);
 }
 
-.header:hover .social,
-.header.active .social,
-.header.interact .social {
-  /* background: var(--blue-50); */
-  border: var(--blue-900) solid 2px;
-  color: var(--blue-900);
+.socialIcon {
+  width: 1.5rem;
+  height: 1.5rem;
+  margin-right: 0.15rem;
 }
-
-.header:hover .socialIcon,
-.header.active .socialIcon,
-.header.interact .socialIcon {
-  border-right: 1px solid var(--blue-900);
-}
-
 
 .hamburger {
   all: unset;
@@ -346,12 +316,12 @@
   align-items: center;
   width: 100%;
   padding-bottom: 0.5rem;
-  border-bottom: var(--zinc-300) 2px solid;
+  border-bottom: var(--blue-300) 2px solid;
 }
 
 .mobileNav .icon {
   width: calc(1rem);
-  transform: scale(0.85);
+  transform: scale(0.75);
 }
 
 .mobileNav .social {
@@ -368,6 +338,10 @@
   height: 3.9rem;
   z-index: 10;
   background: linear-gradient(0deg, rgba(255, 255, 255, 0) 0%, var(--zinc-100) 40%);
+}
+
+.social {
+  display: none;
 }
 
 @media (orientation: landscape) {
