--- a/web-app/src/components/panel/card-panel/card-panel.module.css
+++ b/web-app/src/components/panel/card-panel/card-panel.module.css
@@ -1,8 +1,3 @@
-.panel {
-  width: 90%;
-  margin: 2rem auto;
-  max-width: 80rem;
-}
 
 .content {
   display: grid;
@@ -40,11 +35,12 @@
 }
 
 .card div {
-  padding: 1rem 1.5rem;
+  padding: 1.5rem 1.5rem 1rem 2rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: flex-start; 
+  align-items: flex-start;
+  height: fit-content;
 }
 
 .card .title {
@@ -88,18 +84,7 @@
   border-radius: 25px;
 }
 
-@media (min-width: 48rem) {
-  .panel {
-    width: 95%;
-    margin: 3rem auto;
-  }
-
-  .content {
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
-    gap: 2rem;
-  }
-
+@media (min-width: 32rem) {
   .card {
     width: 100%;
     min-width: 280px;
@@ -111,6 +96,15 @@
     height: 100%;
     object-fit: cover;
     border-radius: 0;
+  }
+}
+
+@media (min-width: 54rem) {
+
+  .content {
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    gap: 2rem;
   }
 
   .content .card:nth-child(1) {
