--- a/web-app/src/components/panel/contact-form/contact-form.module.css
+++ b/web-app/src/components/panel/contact-form/contact-form.module.css
@@ -17,6 +17,7 @@
 .panel h2,
 .panel p {
   color: var(--zinc-100);
+  width: 100%;
 }
 
 .panel h2 {
@@ -72,6 +73,24 @@
   border: 3px solid var(--sunshine-yellow);
 }
 
+.error {
+  width: 100%;
+  margin-top: 1rem;
+  padding: 0.5rem 1rem;
+  border: 3px solid var(--red-300);
+  border-radius: 5px;
+  background: var(--red-500);
+}
+
+.error p {
+  color: var(--zinc-100);
+  font-size: 0.9rem;
+}
+
+.error .icon {
+  margin-right: 0.3rem;
+}
+
 @media (min-width: 48rem) {
   
   .formContent {
@@ -96,4 +115,33 @@
     margin-bottom: 0;
   }
 
+}
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100lvw;
+  height: 100lvh;
+  background: rgba(0, 0, 0, 0.6);
+  z-index: 100;
+}
+
+.popup {
+  position: fixed;
+  z-index: 101;
+  top: 40%;
+  left: 50%;
+  width: 90%;
+  max-width: 35rem;
+  transform: translate(-50%, -50%);
+  background: var(--zinc-100);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 0.5rem;
+  padding: 1.5rem;
+  border: var(--blue-300) 8px solid;
+  border-radius: 15px;
 }
