--- a/web-app/src/components/panel/card-panel/card-panel.module.css
+++ b/web-app/src/components/panel/card-panel/card-panel.module.css
@@ -79,7 +79,8 @@
 
 .card img {
   width: 100%;
-  height: 100%;
+  height: auto;
+  aspect-ratio: 1/1;
   object-fit: cover;
   border-radius: 25px;
 }
