--- a/web-app/src/components/panel/card-panel/card-panel.module.css
+++ b/web-app/src/components/panel/card-panel/card-panel.module.css
@@ -1,4 +1,3 @@
-
 .content {
   display: grid;
   grid-template-columns: 1fr;
@@ -8,7 +7,6 @@
 
 .card {
   width: 100%;
-  min-width: 280px;
   box-shadow: 0 10px 12px rgba(47, 74, 111, 0.2);
   border-radius: 25px;
   display: flex;
@@ -93,6 +91,7 @@
   }
 
   .card img {
+    min-width: 30%;
     width: 30%;
     height: 100%;
     object-fit: cover;
@@ -101,7 +100,6 @@
 }
 
 @media (min-width: 54rem) {
-
   .content {
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr;
@@ -111,15 +109,15 @@
   .content .card:nth-child(1) {
     background: var(--blue-200);
   }
-  
+
   .content .card:nth-child(2) {
     background: var(--yellow-100);
   }
-  
+
   .content .card:nth-child(3) {
     background: var(--yellow-100);
   }
-  
+
   .content .card:nth-child(4) {
     background: var(--blue-100);
   }
