--- a/web-app/src/components/panel/link-grid/link-grid.module.css
+++ b/web-app/src/components/panel/link-grid/link-grid.module.css
@@ -39,7 +39,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: baseline;
-  gap: 0.5rem;
+  gap: 0.85rem;
 }
 
 .hero .learnMore {
@@ -77,7 +77,7 @@
   width: 100%;
 }
 
-.links > *:nth-child(n+3) {
+.links > *:nth-child(n + 3) {
   display: none;
 }
 
@@ -145,7 +145,12 @@
 
   .hero img {
     width: 40%;
+    /* max-width: 28rem; */
     align-self: stretch;
+  }
+
+  .hero div {
+    width: 100%;
   }
 
   .hero .learnMore {
@@ -154,7 +159,8 @@
 }
 
 @media (min-width: 56rem) {
-  .links > *:nth-child(n+4) {
+
+  .links > *:nth-child(n + 4) {
     display: none;
   }
 
@@ -164,6 +170,11 @@
 }
 
 @media (min-width: 72rem) {
+
+  .hero img {
+    width: 45%;
+  }
+
   .links > *:nth-child(n) {
     display: block;
   }
