--- a/web-app/src/components/panel/navbar/navbar.module.css
+++ b/web-app/src/components/panel/navbar/navbar.module.css
@@ -1,4 +1,3 @@
-
 .header {
   display: flex;
   justify-content: center;
@@ -89,7 +88,6 @@
   transform: scale(0.85) rotate(90deg);
 }
 
-
 .dropdownContainer {
   position: relative;
 }
@@ -139,7 +137,7 @@
 }
 
 .projectsButton + .dropdown {
-  border-color: var(--yellow-400)
+  border-color: var(--yellow-400);
 }
 
 .projectsButton + .dropdown a:hover {
@@ -344,7 +342,11 @@
   width: 100%;
   height: 3.9rem;
   z-index: 10;
-  background: linear-gradient(0deg, rgba(255, 255, 255, 0) 0%, var(--yellow-100) 40%);
+  background: linear-gradient(
+    0deg,
+    rgba(255, 255, 255, 0) 0%,
+    var(--yellow-100) 40%
+  );
 }
 
 .social {
