Create Feeling Blue popup

--- a/web-app/src/app/projects/bags-of-hope/page.module.css
+++ b/web-app/src/app/projects/bags-of-hope/page.module.css
@@ -63,3 +63,65 @@
     margin: 3.5rem auto;
   }
 }
+
+.donations h2 {
+  max-width: 45rem;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.donations p {
+  margin: 1rem auto;
+  max-width: 45rem;
+}
+
+.recs {
+  border-radius: 16px;
+  box-shadow: 0 0 10px  rgba(0, 0, 0, 0.2);
+  overflow: hidden;
+  max-width: 45rem;
+  margin: auto;
+}
+
+.recs ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.recs li {
+  font-family: var(--font-body);
+  font-size: 1rem;
+  margin: 0 auto;
+  color: var(--zinc-900);
+  padding-left: 1.5rem;
+  display: flex;
+  align-items: stretch;
+  justify-content: flex-start;
+  gap: 1rem;
+}
+
+.recs li div {
+  display: block;
+  width: 6px;
+  background: var(--blue-300);
+}
+
+.recs li span {
+  display: block;
+  height: 100%;
+  width: 100%;
+  padding: 0.5rem 0;
+}
+
+.recs ul > *:nth-of-type(3n-1) {
+  background: var(--yellow-400);
+}
+
+.recs ul > *:nth-of-type(3n-2) {
+  background: var(--blue-300);
+}
+
+.recs ul > *:nth-of-type(3n) {
+  background: var(--zinc-100);
+}
