--- a/messages-of-hope/app/page.module.css
+++ b/messages-of-hope/app/page.module.css
@@ -48,7 +48,7 @@
 
 .banner .content {
   width: 95%;
-  max-width: 45rem;
+  max-width: 79rem;
   margin: auto;
   display: flex;
   flex-direction: column;
@@ -76,6 +76,10 @@
 @media (min-width: 40rem) {
   .banner {
     gap: 1rem;
+  }
+
+  .banner .content {
+    width: 90%;
   }
 
   .banner .content .links {
@@ -376,8 +380,7 @@
 }
 
 .ourStory {
-  width: 90%;
-  max-width: 79rem;
+  width: 100%;
   margin: 3rem auto;
   position: relative;
 }
@@ -398,6 +401,8 @@
   margin: 1rem auto 0 auto;
   gap: 1rem;
   position: relative;
+  width: 90%;
+  max-width: 79rem;
 }
 
 .ourStory .content img {
@@ -422,9 +427,9 @@
   align-self: flex-end;
 }
 
-@media (min-width: 48rem) {
+@media (min-width: 64rem) {
   .ourStory {
-    width: 95%;
+    width: 100%;
   }
 
   .ourStory .content {
@@ -440,7 +445,11 @@
   .ourStory .content div {
     grid-column: 1 / 2;
     grid-row: 1 / 2;
-    width: 95%;
+    width: 100%;
     margin: 0 auto;
+  }
+
+  .ourStory .content {
+    width: 95%;
   }
 }
