--- a/messages-of-hope/app/page.module.css
+++ b/messages-of-hope/app/page.module.css
@@ -1,6 +1,6 @@
 .banner {
   max-width: 79rem;
-  margin: 3rem auto;
+  margin: 2rem auto;
 }
 
 .banner .hero {
@@ -128,6 +128,8 @@
   background: hsl(var(--blue-300));
   margin: 3rem auto;
   padding: 3rem 0;
+  position: relative;
+  overflow: hidden;
 }
 
 .getInvolved h2 {
@@ -136,6 +138,8 @@
   font-weight: 600;
   text-align: center;
   width: 90%;
+  z-index: 2;
+  position: relative;
 }
 
 .getInvolved .links {
@@ -235,13 +239,85 @@
   }
   .getInvolved .links .art2 {
     width: 9rem;
-    top: 60%;
+    top: 50%;
     left: 80%;
   }
   .getInvolved .links .art3 {
     width: 8rem;
     top: 92%;
     left: -10%;
+  }
+
+  .getInvolved .ring1 {
+    position: absolute;
+    top: -3rem;
+    left: -10.5rem;
+  }
+  .getInvolved .ring1 span:nth-of-type(1) {
+    display: block;
+    width: 17rem;
+    aspect-ratio: 1/1;
+    border: 19px solid hsl(var(--blue-500));
+    border-radius: 50%;
+    z-index: 1;
+  }
+  .getInvolved .ring1 span:nth-of-type(2) {
+    display: block;
+    width: 13rem;
+    aspect-ratio: 1/1;
+    border: 15px solid hsl(var(--blue-600));
+    border-radius: 50%;
+    position: absolute;
+    top: 7rem;
+    left: 8rem;
+    z-index: 1;
+  }
+  .getInvolved .ring1 span:nth-of-type(3) {
+    display: block;
+    width: 16.5rem;
+    aspect-ratio: 1/1;
+    border: 8px solid hsl(var(--blue-400));
+    border-radius: 50%;
+    position: absolute;
+    top: 13rem;
+    left: 2rem;
+    z-index: 1;
+  }
+
+  .getInvolved .ring2 {
+    position: absolute;
+    bottom: -6rem;
+    right: -15rem;
+  }
+  .getInvolved .ring2 span:nth-of-type(1) {
+    display: block;
+    width: 33rem;
+    aspect-ratio: 1/1;
+    border: 17px solid hsl(var(--blue-500));
+    border-radius: 50%;
+    z-index: 1;
+  }
+  .getInvolved .ring2 span:nth-of-type(2) {
+    display: block;
+    width: 24rem;
+    aspect-ratio: 1/1;
+    border: 13px solid hsl(var(--blue-600));
+    border-radius: 50%;
+    position: absolute;
+    bottom: 0rem;
+    right: 0rem;
+    z-index: 1;
+  }
+  .getInvolved .ring2 span:nth-of-type(3) {
+    display: block;
+    width: 20rem;
+    aspect-ratio: 1/1;
+    border: 15px solid hsl(var(--blue-400));
+    border-radius: 50%;
+    position: absolute;
+    bottom: -2rem;
+    right: 18rem;
+    z-index: 1;
   }
 }
 
@@ -276,6 +352,12 @@
     aspect-ratio: unset;
     position: relative;
     padding: 10% 5%;
+  }
+
+  .getInvolved .ring2 {
+    position: absolute;
+    bottom: -12rem;
+    right: -20rem;
   }
 }
 
@@ -451,5 +533,18 @@
 
   .ourStory .content {
     width: 95%;
+  }
+}
+
+.rightLines {
+  display: none;
+}
+
+@media (min-width: 120rem) {
+  .rightLines {
+    display: block;
+    position: absolute;
+    right: 0rem;
+    top: 0;
   }
 }
