--- a/messages-of-hope/components/contact-form/contact-form.module.css
+++ b/messages-of-hope/components/contact-form/contact-form.module.css
@@ -2,6 +2,8 @@
   background: hsl(var(--blue-800));
   padding: 3rem 0;
   margin: 3rem 0;
+  position: relative;
+  overflow: hidden;
 }
 
 .panel h2 {
@@ -17,6 +19,8 @@
   width: 90%;
   color: hsl(var(--zinc-100));
   max-width: 79rem;
+  position: relative;
+  z-index: 2;
 }
 
 .panel form {
@@ -28,6 +32,8 @@
   gap: 1rem;
   width: 90%;
   max-width: 79rem;
+  z-index: 2;
+  position: relative;
 }
 
 .panel form .content {
@@ -87,6 +93,43 @@
   background: hsla(var(--blue-300), 0.7);
 }
 
+.ring2 {
+  position: absolute;
+  bottom: -6rem;
+  right: -30rem;
+  z-index: 0;
+}
+.ring2 span:nth-of-type(1) {
+  display: block;
+  width: 33rem;
+  aspect-ratio: 1/1;
+  border: 17px solid hsl(var(--blue-500));
+  border-radius: 50%;
+  z-index: 1;
+}
+.ring2 span:nth-of-type(2) {
+  display: block;
+  width: 24rem;
+  aspect-ratio: 1/1;
+  border: 13px solid hsl(var(--blue-600));
+  border-radius: 50%;
+  position: absolute;
+  bottom: 0rem;
+  right: 0rem;
+  z-index: 1;
+}
+.ring2 span:nth-of-type(3) {
+  display: block;
+  width: 20rem;
+  aspect-ratio: 1/1;
+  border: 15px solid hsl(var(--blue-400));
+  border-radius: 50%;
+  position: absolute;
+  bottom: -2rem;
+  right: 18rem;
+  z-index: 1;
+}
+
 @media (min-width: 64rem) {
   .panel p,
   .panel form {
@@ -102,5 +145,42 @@
 
   .panel form .content div {
     justify-content: space-between;
+  }
+
+  .ring1 {
+    position: absolute;
+    top: -14rem;
+    left: -16rem;
+    z-index: 0;
+  }
+  .ring1 span:nth-of-type(1) {
+    display: block;
+    width: 17rem;
+    aspect-ratio: 1/1;
+    border: 19px solid hsl(var(--blue-500));
+    border-radius: 50%;
+    z-index: 1;
+  }
+  .ring1 span:nth-of-type(2) {
+    display: block;
+    width: 13rem;
+    aspect-ratio: 1/1;
+    border: 15px solid hsl(var(--blue-600));
+    border-radius: 50%;
+    position: absolute;
+    top: 7rem;
+    left: 8rem;
+    z-index: 1;
+  }
+  .ring1 span:nth-of-type(3) {
+    display: block;
+    width: 16.5rem;
+    aspect-ratio: 1/1;
+    border: 8px solid hsl(var(--blue-400));
+    border-radius: 50%;
+    position: absolute;
+    top: 13rem;
+    left: 2rem;
+    z-index: 1;
   }
 }
