Work in progress

--- a/messages-of-hope/app/page.module.css
+++ b/messages-of-hope/app/page.module.css
@@ -505,6 +505,10 @@
   width: 100%;
 }
 
+.ourStory .content div p {
+  width: 100%;
+}
+
 .ourStory .content div .button {
   align-self: flex-end;
 }
