--- a/messages-of-hope/components/contact-form/contact-form.module.css
+++ b/messages-of-hope/components/contact-form/contact-form.module.css
@@ -6,6 +6,10 @@
   overflow: hidden;
 }
 
+.panel.blue {
+  background: hsl(var(--blue-300));
+}
+
 .panel h2 {
   margin: 0 auto 0.7rem auto;
   font-size: 2rem;
@@ -15,12 +19,20 @@
   color: hsl(var(--zinc-100));
 }
 
+.panel.blue h2 {
+  color: hsl(var(--zinc-800));
+}
+
 .panel > p {
   width: 90%;
   color: hsl(var(--zinc-100));
   max-width: 79rem;
   position: relative;
   z-index: 2;
+}
+
+.panel.blue > p {
+  color: hsl(var(--zinc-800));
 }
 
 .panel form {
@@ -58,7 +70,6 @@
 .panel form .content textarea {
   width: 100%;
   padding: 0.5rem;
-  border: 1px solid hsl(var(--blue-300));
   border-radius: 5px;
   font-size: 0.9rem;
   font-family: var(--font-body);
@@ -66,11 +77,23 @@
   outline: none;
 }
 
+.panel.blue form .content input,
+.panel.blue form .content textarea {
+  border: 3px solid hsl(var(--blue-300));
+}
+
 .panel form .content input:focus,
 .panel form .content input:active,
 .panel form .content textarea:focus,
 .panel form .content textarea:active {
   border-color: hsl(var(--blue-300));
+}
+
+.panel.blue form .content input:focus,
+.panel.blue form .content input:active,
+.panel.blue form .content textarea:focus,
+.panel.blue form .content textarea:active {
+  border-color: hsl(var(--blue-800));
 }
 
 .panel form button {
@@ -87,10 +110,21 @@
   transition: all 0.2s;
 }
 
+.panel.blue form button {
+  color: hsl(var(--zinc-100));
+  background: hsl(var(--blue-800));
+}
+
 .panel form button:hover,
 .panel form button:focus,
 .panel form button:active {
   background: hsla(var(--blue-300), 0.7);
+}
+
+.panel.blue form button:hover,
+.panel.blue form button:focus,
+.panel.blue form button:active {
+  background: hsla(var(--blue-800), 0.7);
 }
 
 .ring2 {
