--- a/messages-of-hope/app/(campaigns)/bags-of-hope/page.module.css
+++ b/messages-of-hope/app/(campaigns)/bags-of-hope/page.module.css
@@ -1,5 +1,4 @@
 .banner {
-  position: relative;
   background: 
     linear-gradient(hsl(var(--zinc-900),0.3), hsl(var(--zinc-900),0.7)), 
     url("https://res.cloudinary.com/dl6zbzu06/image/upload/v1743592893/IMG_1599_wpo5wq.jpg") 
@@ -7,153 +6,12 @@
     hsl(var(--blue-800));
 }
 
-.banner .art1 {
-  position: absolute;
-  bottom: -1rem;
-  left: -1.5rem;
-  width: 4rem;
-  height: 4rem;
-  z-index: 1;
-  background: hsl(var(--yellow-400));
-  border-radius: 50%;
-}
-
-.banner .art2 {
-  position: absolute;
-  bottom: -2.5rem;
-  left: 2rem;
-  width: 5rem;
-  height: 5rem;
-  z-index: 3;
-  background: hsl(var(--blue-300));
-  border-radius: 50%;
-}
-
-.banner .art3 {
-  position: absolute;
-  bottom: -0.5rem;
-  left: 6rem;
-  width: 3rem;
-  height: 3rem;
-  z-index: 2;
-  background: hsl(var(--blue-800));
-  border-radius: 50%;
-}
-
-.banner .art4 {
-  position: absolute;
-  bottom: -1.75rem;
-  left: 8rem;
-  width: 4rem;
-  height: 4rem;
-  z-index: 1;
-  background: hsl(var(--yellow-400));
-  border-radius: 50%;
-}
-
-.banner .art5 {
-  position: absolute;
-  bottom: -1rem;
-  left: 11rem;
-  width: 3rem;
-  height: 3rem;
-  z-index: 2;
-  background: hsl(var(--blue-300));
-  border-radius: 50%;
-}
-
-.banner .art6 {
-  position: absolute;
-  bottom: -3rem;
-  right: -1.5rem;
-  width: 5rem;
-  height: 5rem;
-  z-index: 1;
-  background: hsl(var(--yellow-400));
-  border-radius: 50%;
-}
-
-.banner .art7 {
-  position: absolute;
-  bottom: -2.5rem;
-  right: 2rem;
-  width: 5rem;
-  height: 5rem;
-  z-index: 3;
-  background: hsl(var(--blue-800));
-  border-radius: 50%;
-}
-
-.banner .art8 {
-  position: absolute;
-  bottom: -0.5rem;
-  right: 6rem;
-  width: 3rem;
-  height: 3rem;
-  z-index: 2;
-  background: hsl(var(--blue-300));
-  border-radius: 50%;
-}
-
-.banner .art9 {
-  position: absolute;
-  bottom: -3rem;
-  right: 8rem;
-  width: 5rem;
-  height: 5rem;
-  z-index: 1;
-  background: hsl(var(--blue-800));
-  border-radius: 50%;
-}
-
-.banner .art10 {
-  position: absolute;
-  bottom: -2rem;
-  right: 12rem;
-  width: 3rem;
-  height: 3rem;
-  z-index: 2;
-  background: hsl(var(--yellow-400));
-  border-radius: 50%;
-}
-
-.banner .inner {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
-  align-items: flex-start;
-  width: 90%;
-  max-width: 79rem;
-  margin: 0 auto 3rem auto;
-  padding-bottom: 3rem;
-  height: 23rem;
-  gap: 1rem;
-}
-
-.banner h1 {
-  margin: 0;
-  font-size: 3rem;
-  color: hsl(var(--zinc-100));
-}
-
-.banner p {
-  font-size: 1.25rem;
-  font-style: italic;
-  color: hsl(var(--zinc-200));
-  width: 100%;
-}
-
-@media (min-width: 64rem) {
-  .banner .inner {
-    width: 95%;
-  }
-}
-
 .what {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  gap: 3rem;
   width: 90%;
   max-width: 79rem;
   margin: 3rem auto;
@@ -164,7 +22,7 @@
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
-  gap: 1rem;
+  gap: 0.5rem;
 }
 
 .what h2 {
@@ -174,19 +32,22 @@
 }
 
 .what img {
-  display: none;
+  width: 100%;
+  height: auto;
+  max-width: 25rem;
 }
 
 @media (min-width: 48rem) {
   .what {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 3fr 2fr;
     gap: 3rem;
   }
 
   .what img {
     display: block;
     width: 100%;
+    max-width: none;
     height: 25rem;
     object-fit: cover;
   }
@@ -194,6 +55,37 @@
 
 @media (min-width: 64rem) {
   .what {
+    width: 95%;
+  }
+}
+
+.feedback {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+  width: 90%;
+  max-width: 79rem;
+  margin: 3rem auto;
+  gap: 0.5rem;
+}
+
+.feedback h2 {
+  margin: 0;
+  font-size: 2rem;
+  font-weight: 600;
+}
+
+.feedback p {
+  width: 100%;
+}
+
+.feedback a {
+  align-self: flex-end;
+}
+
+@media (min-width: 64rem) {
+  .feedback {
     width: 95%;
   }
 }
@@ -239,6 +131,126 @@
   }
 }
 
+.setup {
+  width: 90%;
+  max-width: 79rem;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+  margin: 3rem auto;
+  gap: 0.5rem;
+}
+
+.setup h2 {
+  margin: 0;
+  font-size: 2rem;
+  font-weight: 600;
+}
+
+.setup .content {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  gap: 2rem;
+  width: 100%;
+  margin: 1rem auto;
+}
+
+.setup .content article {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  width: 100%;
+  overflow: hidden;
+  border-radius: 10px;
+  box-shadow: 0 5px 8px 5px hsla(var(--zinc-300), 0.8);
+  background: hsla(var(--blue-50), 0.3);
+}
+
+.setup .content article.yellow {
+  background: hsla(var(--yellow-50), 0.3);
+}
+
+.setup .content h3 {
+  margin: 0;
+  font-size: 1.5rem;
+  font-weight: 600;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  background: hsla(var(--blue-100), 0.7);
+  padding-left: 1rem;
+}
+
+.setup .content article.yellow h3 {
+  background: hsla(var(--yellow-100), 0.7);
+}
+
+.setup .content h3 sup {
+  font-size: 0.8rem;
+  color: hsl(var(--zinc-700));
+}
+
+.setup .content h3 .highlight {
+  background: hsl(var(--blue-300));
+  padding: 1rem;
+}
+
+.setup .content article.yellow h3 .highlight {
+  background: hsl(var(--yellow-400));
+}
+
+.setup .content article .list {
+  display: grid;
+  padding: 0;
+  margin: 0;
+  width: 100%;
+  padding: 1rem;
+  gap: 0.25rem;
+}
+
+@media (min-width: 30rem) {
+  .setup .content article .list {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+
+.setup .content article .list li {
+  font-family: var(--font-body);
+  margin-left: 2rem;
+}
+
+.setup .content h4 {
+  margin: 0 auto;
+  font-size: 1.25rem;
+  font-weight: 600;
+}
+
+@media (min-width: 48rem) {
+  .setup .content {
+    flex-direction: row;
+    align-items: stretch;
+  }
+
+  .setup .content article .list {
+    grid-template-columns: 1fr;
+  }
+}
+
+@media (min-width: 64rem) {
+  .setup {
+    width: 95%;
+  }
+
+  .setup .content article .list {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+
 .journey {
   display: flex;
   flex-direction: column;
@@ -270,7 +282,7 @@
 @media (min-width: 48rem) {
   .journey {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 2fr 3fr;
     gap: 3rem;
   }
 
@@ -324,10 +336,35 @@
   height: auto;
 }
 
+.help .links {
+  align-self: flex-end;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+}
+
+.help h3 {
+  font-size: 1.25rem;
+  font-weight: 600;
+  margin: 0;
+  width: 100%;
+}
+
+.help ul {
+  margin: 0;
+}
+
+.help ul a {
+  color: hsl(var(--zinc-800));
+  font-family: var(--font-heading);
+  font-weight: 500;
+}
+
 @media (min-width: 48rem) {
   .help {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 3fr 2fr;
     gap: 4rem;
     justify-content: flex-start;
     align-self: flex-start;
@@ -340,6 +377,27 @@
 
 @media (min-width: 64rem) {
   .help {
+    width: 95%;
+  }
+}
+
+.disclaimer {
+  width: 90%;
+  max-width: 79rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin: 3rem auto 0 auto;
+}
+
+.disclaimer p {
+  font-size: 0.8rem;
+  color: hsl(var(--zinc-700));
+}
+
+@media (min-width: 64rem) {
+  .disclaimer {
     width: 95%;
   }
 }
