--- a/messages-of-hope/app/(campaigns)/messages-of-hope/page.module.css
+++ b/messages-of-hope/app/(campaigns)/messages-of-hope/page.module.css
@@ -1,152 +1,9 @@
 .banner {
-  position: relative;
   background:
     linear-gradient(hsl(var(--zinc-900), 0.3), hsl(var(--zinc-900), 0.7)),
     url("https://res.cloudinary.com/dl6zbzu06/image/upload/v1743890938/bl4m2UPETa_slguyb_1_it3hay_fzmltc.jpg")
       left 50% top 60% / cover no-repeat border-box,
     hsl(var(--blue-800));
-}
-
-.banner .art1 {
-  position: absolute;
-  bottom: -1rem;
-  left: -1.5rem;
-  width: 4rem;
-  height: 4rem;
-  z-index: 1;
-  background: hsl(var(--yellow-400));
-  border-radius: 50%;
-}
-
-.banner .art2 {
-  position: absolute;
-  bottom: -2.5rem;
-  left: 2rem;
-  width: 5rem;
-  height: 5rem;
-  z-index: 3;
-  background: hsl(var(--blue-300));
-  border-radius: 50%;
-}
-
-.banner .art3 {
-  position: absolute;
-  bottom: -0.5rem;
-  left: 6rem;
-  width: 3rem;
-  height: 3rem;
-  z-index: 2;
-  background: hsl(var(--blue-800));
-  border-radius: 50%;
-}
-
-.banner .art4 {
-  position: absolute;
-  bottom: -1.75rem;
-  left: 8rem;
-  width: 4rem;
-  height: 4rem;
-  z-index: 1;
-  background: hsl(var(--yellow-400));
-  border-radius: 50%;
-}
-
-.banner .art5 {
-  position: absolute;
-  bottom: -1rem;
-  left: 11rem;
-  width: 3rem;
-  height: 3rem;
-  z-index: 2;
-  background: hsl(var(--blue-300));
-  border-radius: 50%;
-}
-
-.banner .art6 {
-  position: absolute;
-  bottom: -3rem;
-  right: -1.5rem;
-  width: 5rem;
-  height: 5rem;
-  z-index: 1;
-  background: hsl(var(--yellow-400));
-  border-radius: 50%;
-}
-
-.banner .art7 {
-  position: absolute;
-  bottom: -2.5rem;
-  right: 2rem;
-  width: 5rem;
-  height: 5rem;
-  z-index: 3;
-  background: hsl(var(--blue-800));
-  border-radius: 50%;
-}
-
-.banner .art8 {
-  position: absolute;
-  bottom: -0.5rem;
-  right: 6rem;
-  width: 3rem;
-  height: 3rem;
-  z-index: 2;
-  background: hsl(var(--blue-300));
-  border-radius: 50%;
-}
-
-.banner .art9 {
-  position: absolute;
-  bottom: -3rem;
-  right: 8rem;
-  width: 5rem;
-  height: 5rem;
-  z-index: 1;
-  background: hsl(var(--blue-800));
-  border-radius: 50%;
-}
-
-.banner .art10 {
-  position: absolute;
-  bottom: -2rem;
-  right: 12rem;
-  width: 3rem;
-  height: 3rem;
-  z-index: 2;
-  background: hsl(var(--yellow-400));
-  border-radius: 50%;
-}
-
-.banner .inner {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
-  align-items: flex-start;
-  width: 90%;
-  max-width: 79rem;
-  margin: 0 auto 3rem auto;
-  padding-bottom: 3rem;
-  height: 23rem;
-  gap: 1rem;
-}
-
-.banner h1 {
-  margin: 0;
-  font-size: 3rem;
-  color: hsl(var(--zinc-100));
-}
-
-.banner p {
-  font-size: 1.25rem;
-  font-style: italic;
-  color: hsl(var(--zinc-200));
-  width: 100%;
-}
-
-@media (min-width: 64rem) {
-  .banner .inner {
-    width: 95%;
-  }
 }
 
 .what {
@@ -177,10 +34,14 @@
   display: none;
 }
 
+.what .button {
+  align-self: flex-end;
+}
+
 @media (min-width: 48rem) {
   .what {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 3fr 2fr;
     gap: 3rem;
   }
 
@@ -199,40 +60,48 @@
 }
 
 .gallery {
+  width: 100%;
+  padding: 3rem 0;
+  margin: 3rem auto;
+  background: hsl(var(--blue-300));
+}
+
+.gallery .inner {
   width: 90%;
   max-width: 79rem;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
   align-items: center;
-  margin: 3rem auto;
+  margin: 0 auto;
   gap: 2rem;
 }
 
-.gallery img {
+.gallery .inner img {
   width: 100%;
   aspect-ratio: 1/1;
   height: auto;
   object-fit: cover;
   margin: auto;
+  border-radius: 10px;
 }
 
 @media (min-width: 32rem) {
-  .gallery {
+  .gallery .inner {
     display: grid;
     grid-template-columns: 1fr 1fr;
   }
 }
 
 @media (min-width: 48rem) {
-  .gallery {
+  .gallery .inner {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
   }
 }
 
 @media (min-width: 64rem) {
-  .gallery {
+  .gallery .inner {
     width: 95%;
   }
 }
